test/success/trait/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

fn foo[T: Bar](v: T) {
    v.bar();
}

fn main() {
    let f = Foo();
    foo(f);
}

}