test/errors/already_moved_field1/main.sk
module Main {

class C {

}

class Bar {
    value: C
    value2: C
}

class Foo {
    bar: Bar
}

fn func[T](i: T) {

}

fn main() {
    let f = Foo(Bar(C(), C()));
    func(f.bar.value);
    func(f);
}

}
